--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,9 @@
 </head>
 <body>
     
+<h1>Front End Rodando</h1>
+
+<script type="module" src="./public/js/main.ts"></script>
+
 </body>
 </html>
